--- a/two.html
+++ b/two.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae sequi minus aperiam provident aut, sed quidem amet, ratione tenetur id deleniti veniam eius ex necessitatibus molestiae quibusdam placeat ullam saepe.
-    Quidem, vitae aliquam! Ex, obcaecati nisi. Aut accusamus sapiente laborum. Voluptate debitis tenetur nemo culpa nobis mollitia sint quae id distinctio tempora ad hic nostrum voluptatum totam, nihil dicta amet?</h1>
-    
+    Quidem, vitae aliquam! </h1>
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum ipsam saepe consectetur ullam praesentium? Fugiat ipsum eligendi maxime possimus voluptatum facere magni ut, dolores expedita odit aperiam, accusamus cupiditate sed!</h2>
+
 </body>
 </html>
