--- a/friends.html
+++ b/friends.html
@@ -13,5 +13,11 @@
         <li>shoaib</li>
         <li>khaliq</li>
     </ul>
+    <ol>
+        <li>sleeping</li>
+        <li>playing mobile games</li>
+        <li>watching anime</li>
+        <li>talking nonsense</li>
+    </ol>
 </body>
 </html>
